
  * checks/changelog-file.desc:
    + [JW] Fix typo.
  * checks/copyright-file.pm:
    + [JW] Stop using Data::Alias.  Thanks to Niko Tyni for the bug report.
      (Closes: #834797)
  * checks/cruft.desc:
    + [JW] Fix typo.
  * checks/debhelper.pm:
    + [NT] Remove logic for CDBS creating a compat file when it is absent
      as debhelper now requires a compat file unconditionally.
  * checks/duplicate-files.desc:
    + [JW] Fix typo.
  * checks/fields.{desc,pm}:
    + [JW] Fix typos.
    + [JW] Escape dots in some regexps.
  * checks/files.desc:
    + [JW] Fix typos.
  * checks/java.desc:
    + [JW] Fix typo.
  * checks/patch-systems.desc:
    + [JW] Fix formatting of some filenames.
  * checks/phppear.{desc,pm}:
    + [JW] Fix typo.
    + [NT] Apply patch from Jochen Sprickerhof to skip this check if the
      package does not contain any php files.  (Closes: #805076)
  * checks/rules.desc:
    + [JW] Fix typo.
    + [JW] Fix tag description formatting.
  * checks/shared-libs.desc:
    + [JW] Fix typos.

  * data/debhelper/compat-level:
    + [NT] Bump debhelper compat versions with the release of debhelper
      10.
  * data/debhelper/dh_{addons,commands}-manual:
    + [JW] Add dh-autoreconf, which is now a dependency of debhelper.
      Thanks to Michael Biebl for the bug report.  (Closes: #835449)
  * data/output/manual-references:
    + [JW] Refresh.
  * data/scripts/interpreters:
    + [JW] Add pypy as a known interpreter. Thanks to Sebastian Ramacher
      for the bug report.  (Closes: #836017)
  * data/spelling/corrections*:
    + [JW] Add more corrections.
      Thanks to Paul Wise for patches for some of them.

  * debian/control:
    + [JW] Drop now-unused libdata-alias-perl from (Build-)Depends.

  * private/refresh-manual-refs:
    + [JW] Fix path to Debian policy for Java.

  * reporting/templates/head.tmpl:
    + [NT] Add subresource integrity fields to all <link> tags.
    + [NT] Add Content-Security-Policy header (via <meta http-equiv>).
