@@ -1,0 +1,9 @@
+Testname: debhelper-compat-named
+Sequence: 6000
+Version: 1.0
+Description: Test support for named compat levels
+Test-Depends: debhelper (>= 10),
+Test-For:
+ package-needs-versioned-debhelper-build-depends
+Test-Against:
+ debhelper-compat-not-a-number
